--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "args": "^5.0.1",
+    "commander": "^6.2.0",
     "cpy": "^8.1.1",
     "esbuild": "^0.8.11",
     "rimraf": "^3.0.2"
